Add initial implementation of AI Documentation Assistant with Streamlit interface and indexing capabilities

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-haystack-ai
+haystack-ai==1.22.1
 sentence-transformers
 requests
 trafilatura
 google-api-python-client
+google-generativeai
