--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 streamlit
-haystack-ai==1.22.1
-sentence-transformers
-requests
+haystack-ai
+google-ai-haystack
 trafilatura
-google-api-python-client
-google-generativeai
