--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit>=1.20.0
-haystack-ai>=2.0.0
+haystack-ai[serper]>=2.0.0
 sentence-transformers>=2.2.2
 google-ai-generativelanguage>=0.3.3
 google-generativeai>=0.3.1
